--- a/superstore_sales/superstore_notebook.ipynb
+++ b/superstore_sales/superstore_notebook.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -219,129 +219,9 @@
        "      <td>0.20</td>\n",
        "      <td>2.5164</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>CA-2014-115812</td>\n",
-       "      <td>6/9/2014</td>\n",
-       "      <td>6/14/2014</td>\n",
-       "      <td>Standard Class</td>\n",
-       "      <td>BH-11710</td>\n",
-       "      <td>Brosina Hoffman</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>...</td>\n",
-       "      <td>90032</td>\n",
-       "      <td>West</td>\n",
-       "      <td>FUR-FU-10001487</td>\n",
-       "      <td>Furniture</td>\n",
-       "      <td>Furnishings</td>\n",
-       "      <td>Eldon Expressions Wood and Plastic Desk Access...</td>\n",
-       "      <td>48.8600</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>14.1694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>CA-2014-115812</td>\n",
-       "      <td>6/9/2014</td>\n",
-       "      <td>6/14/2014</td>\n",
-       "      <td>Standard Class</td>\n",
-       "      <td>BH-11710</td>\n",
-       "      <td>Brosina Hoffman</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>...</td>\n",
-       "      <td>90032</td>\n",
-       "      <td>West</td>\n",
-       "      <td>OFF-AR-10002833</td>\n",
-       "      <td>Office Supplies</td>\n",
-       "      <td>Art</td>\n",
-       "      <td>Newell 322</td>\n",
-       "      <td>7.2800</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.9656</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>CA-2014-115812</td>\n",
-       "      <td>6/9/2014</td>\n",
-       "      <td>6/14/2014</td>\n",
-       "      <td>Standard Class</td>\n",
-       "      <td>BH-11710</td>\n",
-       "      <td>Brosina Hoffman</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>...</td>\n",
-       "      <td>90032</td>\n",
-       "      <td>West</td>\n",
-       "      <td>TEC-PH-10002275</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>Phones</td>\n",
-       "      <td>Mitel 5320 IP Phone VoIP phone</td>\n",
-       "      <td>907.1520</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>90.7152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>CA-2014-115812</td>\n",
-       "      <td>6/9/2014</td>\n",
-       "      <td>6/14/2014</td>\n",
-       "      <td>Standard Class</td>\n",
-       "      <td>BH-11710</td>\n",
-       "      <td>Brosina Hoffman</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>...</td>\n",
-       "      <td>90032</td>\n",
-       "      <td>West</td>\n",
-       "      <td>OFF-BI-10003910</td>\n",
-       "      <td>Office Supplies</td>\n",
-       "      <td>Binders</td>\n",
-       "      <td>DXL Angle-View Binders with Locking Rings by S...</td>\n",
-       "      <td>18.5040</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>5.7825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>CA-2014-115812</td>\n",
-       "      <td>6/9/2014</td>\n",
-       "      <td>6/14/2014</td>\n",
-       "      <td>Standard Class</td>\n",
-       "      <td>BH-11710</td>\n",
-       "      <td>Brosina Hoffman</td>\n",
-       "      <td>Consumer</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>...</td>\n",
-       "      <td>90032</td>\n",
-       "      <td>West</td>\n",
-       "      <td>OFF-AP-10002892</td>\n",
-       "      <td>Office Supplies</td>\n",
-       "      <td>Appliances</td>\n",
-       "      <td>Belkin F5C206VTEL 6 Outlet Surge</td>\n",
-       "      <td>114.9000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>34.4700</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 21 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -351,11 +231,6 @@
        "2       3  CA-2016-138688   6/12/2016   6/16/2016    Second Class    DV-13045   \n",
        "3       4  US-2015-108966  10/11/2015  10/18/2015  Standard Class    SO-20335   \n",
        "4       5  US-2015-108966  10/11/2015  10/18/2015  Standard Class    SO-20335   \n",
-       "5       6  CA-2014-115812    6/9/2014   6/14/2014  Standard Class    BH-11710   \n",
-       "6       7  CA-2014-115812    6/9/2014   6/14/2014  Standard Class    BH-11710   \n",
-       "7       8  CA-2014-115812    6/9/2014   6/14/2014  Standard Class    BH-11710   \n",
-       "8       9  CA-2014-115812    6/9/2014   6/14/2014  Standard Class    BH-11710   \n",
-       "9      10  CA-2014-115812    6/9/2014   6/14/2014  Standard Class    BH-11710   \n",
        "\n",
        "     Customer Name    Segment        Country             City  ...  \\\n",
        "0      Claire Gute   Consumer  United States        Henderson  ...   \n",
@@ -363,11 +238,6 @@
        "2  Darrin Van Huff  Corporate  United States      Los Angeles  ...   \n",
        "3   Sean O'Donnell   Consumer  United States  Fort Lauderdale  ...   \n",
        "4   Sean O'Donnell   Consumer  United States  Fort Lauderdale  ...   \n",
-       "5  Brosina Hoffman   Consumer  United States      Los Angeles  ...   \n",
-       "6  Brosina Hoffman   Consumer  United States      Los Angeles  ...   \n",
-       "7  Brosina Hoffman   Consumer  United States      Los Angeles  ...   \n",
-       "8  Brosina Hoffman   Consumer  United States      Los Angeles  ...   \n",
-       "9  Brosina Hoffman   Consumer  United States      Los Angeles  ...   \n",
        "\n",
        "  Postal Code  Region       Product ID         Category Sub-Category  \\\n",
        "0       42420   South  FUR-BO-10001798        Furniture    Bookcases   \n",
@@ -375,11 +245,6 @@
        "2       90036    West  OFF-LA-10000240  Office Supplies       Labels   \n",
        "3       33311   South  FUR-TA-10000577        Furniture       Tables   \n",
        "4       33311   South  OFF-ST-10000760  Office Supplies      Storage   \n",
-       "5       90032    West  FUR-FU-10001487        Furniture  Furnishings   \n",
-       "6       90032    West  OFF-AR-10002833  Office Supplies          Art   \n",
-       "7       90032    West  TEC-PH-10002275       Technology       Phones   \n",
-       "8       90032    West  OFF-BI-10003910  Office Supplies      Binders   \n",
-       "9       90032    West  OFF-AP-10002892  Office Supplies   Appliances   \n",
        "\n",
        "                                        Product Name     Sales  Quantity  \\\n",
        "0                  Bush Somerset Collection Bookcase  261.9600         2   \n",
@@ -387,11 +252,6 @@
        "2  Self-Adhesive Address Labels for Typewriters b...   14.6200         2   \n",
        "3      Bretford CR4500 Series Slim Rectangular Table  957.5775         5   \n",
        "4                     Eldon Fold 'N Roll Cart System   22.3680         2   \n",
-       "5  Eldon Expressions Wood and Plastic Desk Access...   48.8600         7   \n",
-       "6                                         Newell 322    7.2800         4   \n",
-       "7                     Mitel 5320 IP Phone VoIP phone  907.1520         6   \n",
-       "8  DXL Angle-View Binders with Locking Rings by S...   18.5040         3   \n",
-       "9                   Belkin F5C206VTEL 6 Outlet Surge  114.9000         5   \n",
        "\n",
        "   Discount    Profit  \n",
        "0      0.00   41.9136  \n",
@@ -399,16 +259,11 @@
        "2      0.00    6.8714  \n",
        "3      0.45 -383.0310  \n",
        "4      0.20    2.5164  \n",
-       "5      0.00   14.1694  \n",
-       "6      0.00    1.9656  \n",
-       "7      0.20   90.7152  \n",
-       "8      0.20    5.7825  \n",
-       "9      0.00   34.4700  \n",
        "\n",
-       "[10 rows x 21 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +273,7 @@
     "df = pd.read_csv(\"superstore_dataset.csv\", encoding=\"latin1\")\n",
     "\n",
     "# Preview the dataset\n",
-    "df.head(10)"
+    "df.head()"
    ]
   },
   {
@@ -471,6 +326,150 @@
    "source": [
     "# Get info\n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the results:\n",
+    "\n",
+    "1. Missing values: none\n",
+    "\n",
+    "2. Data types:\n",
+    "   - `Order Date` = object instead of datetime\n",
+    "   - `Ship Date` = object instead of datetime\n",
+    "\n",
+    "3. Need encoding\n",
+    "   - `Ship Mode`\n",
+    "   - `Segment`\n",
+    "   - `Country`\n",
+    "   - `City`\n",
+    "   - `State`\n",
+    "   - `Region`\n",
+    "   - `Category`\n",
+    "   - `Sub-Category`\n",
+    "   - `Product Name`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Clean the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a copy of df\n",
+    "df1 = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Data Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9994 entries, 0 to 9993\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   Row ID         9994 non-null   int64         \n",
+      " 1   Order ID       9994 non-null   object        \n",
+      " 2   Order Date     9994 non-null   datetime64[ns]\n",
+      " 3   Ship Date      9994 non-null   datetime64[ns]\n",
+      " 4   Ship Mode      9994 non-null   object        \n",
+      " 5   Customer ID    9994 non-null   object        \n",
+      " 6   Customer Name  9994 non-null   object        \n",
+      " 7   Segment        9994 non-null   object        \n",
+      " 8   Country        9994 non-null   object        \n",
+      " 9   City           9994 non-null   object        \n",
+      " 10  State          9994 non-null   object        \n",
+      " 11  Postal Code    9994 non-null   int64         \n",
+      " 12  Region         9994 non-null   object        \n",
+      " 13  Product ID     9994 non-null   object        \n",
+      " 14  Category       9994 non-null   object        \n",
+      " 15  Sub-Category   9994 non-null   object        \n",
+      " 16  Product Name   9994 non-null   object        \n",
+      " 17  Sales          9994 non-null   float64       \n",
+      " 18  Quantity       9994 non-null   int64         \n",
+      " 19  Discount       9994 non-null   float64       \n",
+      " 20  Profit         9994 non-null   float64       \n",
+      "dtypes: datetime64[ns](2), float64(3), int64(3), object(13)\n",
+      "memory usage: 1.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert `Order Date` and `Ship Date` from object to datetime\n",
+    "\n",
+    "# Create a list of columns to convert to datetime\n",
+    "datetime_cols = [\"Order Date\", \"Ship Date\"]\n",
+    "\n",
+    "# Convert to datetime with a for loop\n",
+    "for col in datetime_cols:\n",
+    "    df1[col] = pd.to_datetime(df1[col], format=\"%m/%d/%Y\")\n",
+    "\n",
+    "# Check the results\n",
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for duplicates\n",
+    "df1.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the results, there is no duplicate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Outliers"
    ]
   }
  ],
